replaced findpopulartags with lombok delgate